qsapecng (1.2.1-1) unstable; urgency=low

  * Initial release. (Closes: #609218)

 -- Simone Rossetto <simros85@gmail.com>  Sun, 23 Jan 2011 21:05:10 +0100