@@ -2,3 +2,4 @@ README
 TODO
 THANKS
 AUTHOR
+src/functor/README.rpoly
